--- a/style.css
+++ b/style.css
@@ -1,34 +1,62 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 body {
     margin: 0;
-    background: #0161cf;
-    height: 800px;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
-header{
-    background-color: #0161cf;
-    height: 100px;
+.bg{
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: -10;
 }
 
 .headline{
     text-align: center;
-    font-size: 50px;
+    font-size: 3.5rem;
     font-weight: bolder;
 }
-#app {
-    display: grid;
-    grid-auto-rows: minmax(90px, auto);
-    /* grid-template-columns:  */
-    height: 618px;
-    background: #0161cf;
-    color:#ffffff;
-    justify-content: center;
-    grid-gap: 1em;
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif;
+#app{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+.card{
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 400px;
+  height: 400px;
+  border: 2px solid purple;
+  border-radius: 50px;
+  background-color: #3b4a6b65;
+  box-shadow: 2px 4px 8px 4px #4444446d;
 
+}
+.zip, .feel{
+  padding: 15px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+}
+label{
+  font-size: 1.5rem;
+}
+input, textarea{
+  width: 100%;
+  height: 50px;
+  border: 1px solid purple;
+  border-radius: 8px;
+  background-color: #ccccccba;
+  font-size: 1rem;
+  font-family: 'Poppins', sans-serif;
 
+}
 
 .entry {
     height: 80px;
@@ -43,31 +71,15 @@ header{
     margin-left: 10px;
 }
 
-/*  Basic Styling To Override Default For Basic HTML Elements */
-label {
-    display: block;
-    font-size: 27px;
-}
-
-input {
-    display: block;
-    height: 60px;
-    width: 320px;
-    background: #22b2da;
-    color: #f0d43a;
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif;
-    border: none;
-}
-
 button {
-    width: 118px;
-    height: 42px;
+  margin-top: 40px;
+    width: 120px;
+    height: 40px;
     background: #3b4a6b;
-    color: #f0d43a;
+    color: #ccc;
     font-size: 26px;
-    font-family: 'Oswald', sans-serif;
     border: none;
+    border-radius: 8px;
     box-shadow: 2px 4px 5px #444;
     cursor: pointer;
 }
@@ -79,12 +91,6 @@ h1 {
     font-size: 36px;
 }
 
-textarea {
-    background: #22b2da;
-    color: #f0d43a;
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif;
-}
 
 /* Reset style for HTML element on active to have no border*/
 input:focus,
@@ -94,27 +100,9 @@ button:focus {
     outline: none;
 }
 
-/* Style for Placeholder Text*/
-::placeholder {
-    /* Firefox, Chrome, Opera */
-    color: #f0d43a;
-    font-family: 'Oswald', sans-serif;
 
-}
 
-:-ms-input-placeholder {
-    /* Internet Explorer 10-11 */
-    color: #f0d43a;
-    font-family: 'Oswald', sans-serif;
 
-}
-
-::-ms-input-placeholder {
-    /* Microsoft Edge */
-    color: #f0d43a;
-    font-family: 'Oswald', sans-serif;
-
-}
 
 #error {
     color: #780c0cf7;
