--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 400px;
+  width: 33.33%;
+  min-width: 350px;
   height: 400px;
   border: 2px solid purple;
   border-radius: 50px;
@@ -106,4 +107,17 @@ button:focus {
 
 #error {
     color: #780c0cf7;
+}
+
+
+@media screen and (max-width:450px) {
+  .headline{
+    font-size: 2rem;
+    margin: 1rem 0.5rem;
+  }
+  .card{
+    width: 80%;
+    
+  }
+
 }
